# meson-example-app

./: .gitignore  README.md  example-main.c  meson.build
subprojects/libexample/: build  download-repo  example.h  meson.build  meson.proposed_solution.build
